--- a/Node.js/portfolio-elmerrr/src/index.html
+++ b/Node.js/portfolio-elmerrr/src/index.html
@@ -29,7 +29,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Dev Elmer</span>
+          Hi, my name is <span class="text-color-main">Elmer Volgers</span>
           <br />
           I'm a Software Developer.
         </h1>
@@ -61,21 +61,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Currently in training at Techgrounds to soon start as a backend developer. The skills for this are currently still at junior starter level. At the same time I want to develop myself into a fully certified Java developer.
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                It would great if I could contribute to projects that directly or indirectly make a difference in the world. Improving people's quality of life in a sustainable way to preserve our nature and climate with the help of software technology is the ideal for me.
               </p>
-              <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                  View Resume
-                </a>
+              <p class="about-wrapper__info-text">
+                My problem solving thinking and drive to develop myself further are my natural qualities that will put me in the right place as a developer. 
+              </p>
               </span>
             </div>
           </div>
@@ -95,20 +88,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Portfolio site</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                   This was an endassingment for the React section. This portfolio site is not fully updated with the latest skills:)
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://portfolio-elmer-volgers.netlify.app">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Elmerrrrrr/portfolio-elmerrr">
                   Source Code
                 </a>
               </div>
@@ -117,7 +106,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Projects-for-Portfolio_0001.jpg" />
                   </div>
                 </a>
               </div>
@@ -128,20 +117,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Calculator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    An end assignment for the JavaScript section. The precent sign (%) is used for modulo calculations. There is a background color change feature.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://bwxkzbnkzutzwfucqsbxog-on.drv.tw/hosting_webpages/TechGrounds/JavaScript/calculatorV2.html">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Elmerrrrrr/TG-Web-development/blob/master/JavaScript/Eindopdracht/Calculator/calculatorV2.html">
                   Source Code
                 </a>
               </div>
@@ -150,7 +135,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Projects-for-Portfolio_0003.jpg" />
                   </div>
                 </a>
               </div>
@@ -162,34 +147,60 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">KeyDestinations.tours</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
+                   This website was build with Wordpress.
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://keydestinations.tours/">
                   See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://keydestinations.tours/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Projects-for-Portfolio_0004.jpg" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
+
+
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Other projects and assignments</h3>
+                <div>
+                  <p class="mb-4">
+                   Serveral other projects and assignments.
+                   <ul>
+                   <br>
+                   <li><a href="https://bwxkzbnkzutzwfucqsbxog-on.drv.tw/hosting_webpages/TechGrounds/JavaScript/rock-paper-scissor.html">Student grades calculator</a></li>
+                   <br>
+                   <li><a href="https://bwxkzbnkzutzwfucqsbxog-on.drv.tw/hosting_webpages/TechGrounds/JavaScript/rock-paper-scissor.html">Rock-Paper-Scissor game</a></li>
+                   <br>
+                   <li><a href="https://www.marassinaperu.com">Marassinaperu - Natural products</a></li>
+                   <br>
+                   <li><a href="https://github.com/Elmerrrrrr/TG-Web-development/tree/master/SpringBoot/weatherApi/src/main/java/com/weather/api">Weather Api - Java, Spring Boot, Feignclient Rest Api application</a></li>
+                   <li><a href="https://github.com/Elmerrrrrr/TG-Web-development/tree/master/SpringBoot/InventoryTechgrounds/src/main/java/inventory/InventoryTechgrounds">Inventory Manager - Java Spring Boot Rest Api application
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://keydestinations.tours/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Projects-for-Portfolio_0002.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
 
         </div>
       </div>
@@ -222,12 +233,6 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <!-- <a href="#" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a> -->
           <a href="https://nl.linkedin.com/in/elmer-volgers-67729614a" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
@@ -240,7 +245,7 @@
 
 
         <p class="footer__text">
-          © 2020 - Webdev Elmer <a href="https://github.com/Elmerrrrrr/" target="_blank">Elmer Volgers</a>
+          © 2021 - <a href="https://github.com/Elmerrrrrr/" target="_blank">Elmer Volgers</a>
         </p>
 
               </div>
